GNOME Bugzilla – Bug 711258
sdp: fix duplicate 'const' declaration warnings
Last modified: 2013-11-01 14:28:07 UTC
Fix duplicate 'const' declaration warnings produced with llvm 5.0 on osx >= 10.8.5.
Created attachment 258735 [details] [review] sdp: fix duplicate const declaration warnings
commit a4996f133b1ac7d43a135cb42b2f7f4b26eee625 Author: Matthieu Bouron <matthieu.bouron@collabora.com> Date: Fri Nov 1 14:22:13 2013 +0000 sdp: fix duplicate 'const' declaration warnings https://bugzilla.gnome.org/show_bug.cgi?id=711258