sdp: fix duplicate 'const' declaration warnings

https://bugzilla.gnome.org/show_bug.cgi?id=711258